# memoise

./: memoise.cabal
snaplets/postgresql-simple/: devel.cfg
src/: Main.hs
