Name:                memoise
Version:             0.11
License:             BSD3
Author:              Ryan Trinkle
Maintainer:          ryan.trinkle@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2
Synopsis:            The world's laziest hyperlink shortener
Description:
  memoi.se is a URL shortener built in Haskell with the Snap framework

Executable memoise
  Hs-source-dirs: src
  Main-is: Main.hs
  Build-depends: base                      >= 4        && < 5
               , snap                      >= 0.10     && < 0.11
               , snap-core                 >= 0.9      && < 0.10
               , snap-extras               >= 0.3      && < 0.4
               , heist                     >= 0.10.2.1 && < 0.11
               , lens                      >= 3.7.0.1  && < 3.8
               , text                      >= 0.11     && < 0.12
               , snaplet-postgresql-simple >= 0.3      && < 0.4
               , network                   >= 2.4      && < 2.5
  GHC-options: -threaded -O2
  Extensions: OverloadedStrings
            , TemplateHaskell
            , FlexibleInstances
            , ScopedTypeVariables
